# aiorch-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
assets/diagrams/: architecture.mmd  classify-branch.mmd  foreach-fanout.mmd  host-integration.mmd  parallel-execution.mmd  pipeline-dag.mmd  retry-lifecycle.mmd  run-lifecycle.mmd
examples/: 01-hello-llm.yaml  02-summarize-text.yaml  06-parallel-perspectives.yaml  20-csv-to-markdown-report.yaml  README.md
examples/core/: 01-smoke-test.yaml  02-inputs.yaml  03-input-integer.yaml  04-input-boolean.yaml  05-input-number.yaml  06-input-list.yaml  07-input-artifact-text.yaml  08-text-document-metrics.yaml  09-text-document-metrics-python.yaml  10-python-primitive-smoke.yaml  11-input-artifact-json.yaml  12-input-artifact-csv.yaml  13-input-artifact-binary.yaml  14-input-http.yaml  15-input-http-json.yaml  18-parallel-fanout-fanin.yaml  21-failure-isolation-with-retry.yaml  25-health-check-multi.yaml  27-multi-input-typed-dashboard.yaml  28-diamond-dependency.yaml  29-nested-foreach-aggregate.yaml  30-map-reduce-text.yaml  31-conditional-multi-branch.yaml  32-compute-graph-numerical.yaml  33-db-read-basic.yaml  34-db-parallel-queries.yaml  35-db-join-aggregate.yaml  36-webhook-api-poll.yaml  37-multi-source-fanout.yaml  38-retry-strategies.yaml  39-pipeline-as-orchestrator.yaml  40-git-commit-digest.yaml  41-stale-branches.yaml  42-log-triage.yaml  43-dep-audit.yaml  44-ssl-cert-expiry.yaml  45-test-results.yaml  46-pr-digest.yaml  47-env-drift.yaml  48-large-files.yaml  (+3 more)
examples/inputs/: headlines.json  sample-projects.csv  sample-prose.txt  sample.diff
examples/llm/: 02-summarize-text.yaml  03-structured-extract.yaml  04-multi-model-compare.yaml  05-chain-refine.yaml  07-foreach-tagger.yaml  08-classify-then-branch.yaml  09-sentiment-scoring.yaml  10-extract-then-validate.yaml  11-map-reduce-summarize.yaml  12-pr-triage.yaml  13-error-log-triage.yaml  14-csv-enricher.yaml  15-changelog-drafter.yaml  16-prompt-cache-demo.yaml  17-temperature-sweep.yaml  18-max-tokens-guardrail.yaml  19-system-persona.yaml  20-csv-to-markdown-report.yaml  21-json-normalizer.yaml  22-email-to-ticket.yaml  23-code-port.yaml  24-sql-query-generator.yaml  README.md  (+7 more)
schemas/: pipeline.v1.schema.json
(+131 files in other folders)
